--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=2_AtividadePL2_PrimeiraAppSpringBoot-MVC-Spring-Data-Jpa
 
+server.port=8888
+
 spring.datasource.url=jdbc:h2:file:./bdutilizadores;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
