--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.formate_sql=true
 
 spring.jpa.defer-datasource-initialization=true
 
+spring.security.user.name=admin
+spring.security.user.password=admin
